# AnimeCal

./: README.md  main.py  pyproject.toml
animecal/: calendar.py  session.py  views.py
animecal/providers/: crunchyroll.py  funimation.py  hidive.py  toonami.py
animecal/templates/: base.html  index.html
